feat(version): update app version to 0.1.1 and implement version retrieval from Cargo.toml

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
         
         <!-- Footer -->
         <footer class="footer">
-            <span id="footer-info">Bare v0.1.0</span>
+            <span id="footer-info">Bare</span>
             <span id="zoom-level" class="zoom-level">100%</span>
         </footer>
     </div>
