Refactor code structure for improved readability and maintainability

--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
         <!-- Hovedinnhold -->
         <main id="content" class="content">
             <div class="loading">
-                <p>Laster...</p>
+                <p>[ LASTER... ]</p>
             </div>
         </main>
         
@@ -184,17 +184,17 @@
                     <button id="btn-close-about" class="modal-close-btn">×</button>
                 </div>
                 <div class="modal-content">
-                    <div class="about-logo">[‡]</div>
+                    <div class="about-logo">[ B ]</div>
                     <h3>Bare</h3>
                     <p class="about-version" id="about-version">Version 0.1.0</p>
                     <p class="about-description">
                         En eksperimentell markdown-nettleser med fokus på personvern, hastighet og rent innhold.
                     </p>
                     <div class="about-features">
-                        <p>► Ren markdown-visning</p>
-                        <p>► Ingen sporing eller cookies</p>
-                        <p>► Rask og lettvektig</p>
-                        <p>► Lys og mørk modus</p>
+                        <p>> Ren markdown-visning</p>
+                        <p>> Ingen sporing eller cookies</p>
+                        <p>> Rask og lettvektig</p>
+                        <p>> Lys og mørk modus</p>
                     </div>
                     <p class="about-copyright">
                         © 2025-2026 Bare Contributors<br>
