feat(ui): implement loading status indicators in footer; enhance user feedback during fetch operations

--- a/src/index.html
+++ b/src/index.html
@@ -204,15 +204,19 @@
             </div>
         </div>
         
-        <!-- Footer / Status Bar (Retro) -->
+        <!-- Footer / Status Bar (Netscape-inspirert) -->
         <footer class="footer">
-            <div class="footer-section">
+            <div class="footer-status-section">
+                <span id="footer-status" class="footer-status-text">Klar</span>
+            </div>
+            <div class="footer-progress-section">
+                <div id="footer-progress" class="footer-progress">
+                    <div id="footer-progress-bar" class="footer-progress-bar"></div>
+                </div>
+            </div>
+            <div class="footer-info-section">
                 <span id="footer-info">Bare v0.1</span>
-            </div>
-            <div class="footer-section">
-                <span id="footer-status">Klar</span>
-            </div>
-            <div class="footer-section">
+                <span class="footer-sep">|</span>
                 <span id="zoom-level" class="zoom-level">100%</span>
             </div>
         </footer>
