feat(ui): enhance settings panel toggle functionality by closing dropdown menu

--- a/src/index.html
+++ b/src/index.html
@@ -46,13 +46,10 @@
                     ☆
                 </button>
                 <button id="btn-bookmarks" class="toolbar-btn" title="Vis bokmerker (Ctrl+B)">
-                    ☰
+                    📑
                 </button>
                 <button id="btn-open" class="toolbar-btn" title="Åpne fil (Ctrl+O)">
                     📁
-                </button>
-                <button id="btn-settings" class="toolbar-btn" title="Innstillinger">
-                    ⚙
                 </button>
                 <div class="menu-container">
                     <button id="btn-menu" class="toolbar-btn" title="Meny">
@@ -71,6 +68,11 @@
                         <button id="btn-theme" class="menu-item" title="Bytt tema">
                             <span class="menu-icon">◑</span>
                             <span>Bytt tema</span>
+                        </button>
+                        <div class="menu-divider"></div>
+                        <button id="btn-settings" class="menu-item" title="Innstillinger">
+                            <span class="menu-icon">⚙</span>
+                            <span>Innstillinger...</span>
                         </button>
                         <div class="menu-divider"></div>
                         <button id="btn-about" class="menu-item" title="Om Bare">
