feat: update project license to GNU GPL v3.0 and reflect changes in documentation

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,7 @@
                     </div>
                     <p class="about-copyright">
                         © 2025-2026 Bare Contributors<br>
-                        Lisensiert under MIT-lisensen
+                        Lisensiert under GNU GPL v3
                     </p>
                 </div>
             </div>
